--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -6,12 +6,13 @@ top=2cm,bottom=2cm]{geometry}
 
 \usepackage{comment}
 \usepackage{hyperref}
+\usepackage{cite}
+\usepackage{natbib}
 \newtheorem{definition}{Определение}
 \newtheorem{theorem}{Теорема}
 \newtheorem{utv}{Утверждение}
 
 \graphicspath{{../pics/}}
-
 
 \begin{document}
 	
@@ -70,9 +71,11 @@ top=2cm,bottom=2cm]{geometry}
 \newpage
 \section{Введение}
 
-Благодаря стремительному развитию технологий, с каждым днём все больше расширяется сфера практического применения технических средств цифровой обработки изображений. При этом относительно новым направлением стала разработка методов распознавания личности на основе человеческого глаза. Идентификация личности человека по радужке – перспективное направление развития, которое может быть использовано в системах контроля доступа. 
+На сегодняшний день можно с уверенностью говорить о том, что биометрические технологии идентификации плотно вошли в нашу жизнь и используются во всех сферах человеческой деятельности, в том числе и в системах контроля. Существует целый ряд биометрических модальностей, позволяющих идентифицировать человека: рисунок папиллярных линий пальца, радужка глаза, походка, голос, почерк. Такое разнообразие методов объясняется тем, что при богатстве потенциальных сценариев использования биометрических модальностей, каждая из них может быть использована по-разному. Например, применение биометрических технологий уже активно осуществляется при проведении платежных операций в банковской сфере, особо нуждающейся в защите данных. Здесь они заменяют уже ставшие традиционными методы идентификации пользователей: ПИН-коды, пароли и т.д. Однако, биометрические технологии имеют широкую перспективу использования, так как обладают целым рядом неоспоримых преимуществ, cреди которых можно выделить неотчуждаемость. Например, пароль может быть передан или украден третим лицом, и система все равно идентифицирует его как исходного пользователя, тогда как биометрическими модальностями труднее воспользоваться другому человеку или украсть без ведома обладателя. 
 
-Интересно то, что эта идея не нова, так, еще в 1936 году офтальмологи \cite{Medic} предложили использовать для этих целей радужную оболочку глаза (рис.~\ref{fig:glaz}). Далее исследователями всего мира разрабатывались различные методы распознавания человека по его радужной оболочке, но по-настоящему сильный рост интереса к идентификации произошел только в начале XXI века. Это объяснялось качественными изменения условий жизнь общества: эволюция средств регистрирования и обработки изображений, необходимость распознавания личности в связи с террористической угрозой\cite{Conf3, Terr, Tech}. 
+Использование биометрических систем настолько плотно вошло в нашу жизнь, что обыватель даже не замечает, как часто и повсеместно ими пользуется. Так, для разблокировки мобильных устройств, применяется отпечаток пальца, снимок лица или радужки. Еще одним преимуществом биометрических систем считается удобство взаимодействия с ними пользователя. Их эффективность работы основывается на способности обработки поступающих данных с учетом изменчивости состояния и условий окружающей среды. То есть, даже в случае значительных искажений параметров входных данных, в связи с изменчивостью состояний (например, ухудшение условий освещенности, затемнение ресницами, отвод взгляда), системы биометрической идентификации, использующие изображения глаза, должны выдавать корректный результат и аутентифицировать пользователя адекватно. Также неоспоримо важным фактором для эффективности систем такого рода, является необходимость работы в условиях ограниченности не только вычислительных ресурсов, но и времени, требующегося на распознавание. 
+
+Благодаря стремительному развитию технологий, с каждым днём все больше расширяется сфера практического применения технических средств цифровой обработки изображений. Одним из направлений стало распознавание человека на основе изображения глаза~(рис.~\ref{fig:glaz}). Эта идея не нова, ещё в 1936 году офтальмологи \cite{Medic} предложили использовать радужную оболочку глаза для распознавания. Далее исследователями всего мира разрабатывались различные методы распознавания человека по его радужной оболочке, но по-настоящему сильный рост интереса произошел только в начале XXI века. Это объясняется качественными изменения условий жизни общества: эволюция средств регистрирования и обработки изображений, необходимость распознавания личности в связи с террористической угрозой~\cite{Conf3, Terr, Tech}. Наряду с идентификацией обработка изображения радужки применяется в медицинских целях, где также важно выделение области интереса. 
 
 \begin{figure}[h]
 	
@@ -86,33 +89,26 @@ top=2cm,bottom=2cm]{geometry}
 	
 \end{figure}
 
-Однако получить качественное и обособленное изображение радужки на практике становится не так просто, и важной задачей оказывается необходимость корректно определять границы глаза, задаваемые веками. Исследования в этом направлении породили различные модели, которые также используют в биометрических системах распознавания личности. 
+Однако получить качественное и обособленное изображение радужки на практике не так просто, и важной задачей оказывается необходимость корректно определять границы глаза, задаваемые веками. Исследования в этом направлении породили различные модели, которые также используют в биометрических системах распознавания, поскольку уточнение границ и исключение нерелевантных областей оказывает значительное влияние на точность результата.
 
-На сегодняшний день можно с уверенностью говорить о том, что биометрические технологии идентификации личности плотно вошли в нашу жизнь и используются во всех сферах человеческой деятельности, в том числе и в системах контроля. Так, существует целый ряд биометрических модальностей, позволяющих идентифицировать человека: рисунок папиллярных линий пальца, радужка глаза, походка, голос, почерк. Такое разнообразие методов объясняется тем, что при богатстве потенциальных сценариев использования биометрических модальностей, каждая из них может быть использована по-разному для аутентификации пользователя. Например, применение биометрических технологий уже активно осуществляется при проведении платежных операций в банковской сфере, особо нуждающейся в защите данных. Здесь они заменяют уже ставшие традиционными методы идентификации пользователей: ПИН-коды, пароли и т.д. Однако, биометрические технологии имеют широкую перспективу использования, так как обладают целым рядом неоспоримых преимуществ. Среди которых можно выделить невозможность кражи ключа без ведома его обладателя.
-
-Использование биометрических систем настолько плотно вошло в нашу жизнь, что обыватель даже не замечает, как часто и повсеместно ими пользуется. Так, в частности, для разблокировки мобильных устройств, применяется отпечаток пальца, снимок лица или радужки. Еще одним преимуществом биометрических систем, в частности идентификации человека по его радужной оболочке, считается удобство взаимодействия с ними пользователя. Эффективность работы систем основывается на способности обработки поступающих в них данных с учетом изменчивости состояния и условий окружающей среды. То есть, даже в случае значительных искажений параметров входящих данных, в связи с изменчивостью состояний (например, ухудшение условий освещенности, затемнение ресницами, отвод взгляда), системы биометрической идентификации, использующие изображения глаза, должны выдавать корректный результат и аутентифицировать пользователя адекватно. Также неоспоримо важным фактором для эффективности систем такого рода, является необходимость работы в условиях ограниченности не только вычислительных ресурсов, но и времени, требующегося на распознание.
-Однако хотелось бы отметить, что обработка изображения радужки необходима не только для идентификации человека, но и применяется в медицинских целях, что еще больше подчеркивает необходимость и важность получения корректной информации. 
-
-\newpage
-В связи со всем вышеперечисленным, в ходе данного исследования был разработан метод выделения века как параметрической кривой на изображении глаза. Представленный метод основан на том, что параметры искомой кривой определяются с помощью максимизации суммы вертикального градиента яркости, рассматриваемого в окрестности века. Стоит учитывать, что большинство, существовавших ранее методов, основывались на определении полной границы века или границы радужки целиком, но ни один из них не предлагал осуществлять обработку в несколько этапов, как в данной работе.
+В ходе данного исследования разработан метод выделения века как параметрической кривой на изображении глаза. Он состоит в определении параметров кривой максимизацией суммы вертикального градиента яркости, рассматриваемого в окрестности века.
  
 
 \newpage
 \subsection{Цели и задачи работы}
 
-\textbf{Цель и задачи исследования.} Основной целью исследования является построение модели, позволяющей определять коэффициенты параболы, задающей положение верхнего века и улучшить качество выделения по сравнению с существующими моделями. Для реализации этой цели были поставлены следующие задачи:
+\textbf{Цель и задачи исследования.} Целью исследования является построение модели, позволяющей определять коэффициенты параболы, задающей положение верхнего века и улучшить качество выделения по сравнению с существующими моделями. Для реализации этой цели были поставлены следующие задачи:
 \begin{itemize}
-	\item Изучить существующие подходы к решению задачи выделения века на изображении глаза.
-	\item Изучить существующие алгоритмы решения этой задачи.
-	\item Провести предобработку данных.
-	\item Реализовать алгоритмическую часть модели, построенной на идее оптимизации и градиентного анализа.
-	\item Модернизировать модель определения крайней точки века с помощью многонаправленного двумерного (2D) фильтра Габора и метода скользящего окна. 
-	\item Реализовать модернизированную модель и сравнить полученные результаты с существующими алгоритмами.
+	\item изучить существующие подходы к решению задачи выделения века на изображении глаза;
+	\item изучить существующие алгоритмы решения этой задачи;
+	\item создать метод предобработки данных;
+	\item реализовать алгоритмическую часть модели, построенной на идее оптимизации и градиентного анализа;
+	\item сравнить полученные результаты с результатами существующих алгоритмов.
 \end{itemize}
 
 \bigskip
 
-\textbf{Научная новизна.} Используется принципиально новый подход к определению коэффициентов квадратичной параболы, задающей веко, с помощью оптимизации градиентного функционала.
+\textbf{Научная новизна.} Используется новый подход к определению коэффициентов параболы, с помощью поиска максимума на множестве проекций.
 
 \bigskip
 
@@ -120,50 +116,134 @@ top=2cm,bottom=2cm]{geometry}
 
 \bigskip
 
-\textbf{Практическая ценность.} Полученная модель может быть использована в качестве встраиваемого модуля. Например, с её помощью можно
-\begin{enumerate}
-	\item Фиксировать границы зрачка глаза для последующей идентификации личности по радужке с более точным результатом.
-	\item Дополнять существующие биометрические системы с помощью идентификации не только радужки испытуемого, но и линии века, получая более высокое качество распознавания.
-\end{enumerate}
+\textbf{Практическая ценность.} Полученная модель может быть использована в качестве встраиваемого модуля. Например, с её помощью можно:
+\begin{itemize}
+	\item определять границы зрачка глаза для повышения точности идентификации личности по радужке;
+	\item дополнять существующие биометрические системы с помощью идентификации не только радужки, но и линии века, получая более высокое качество распознавания.
+\end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \newpage
-\section{Определения и обозначения}
+\section{Постановка задачи}
 
-\subsection{Основные определения и понятия}
 
-\textcolor{red}{Возможно блок лишний и его стоит убрать?}
-
-\textcolor{red}{Какого рода терминологию сюда стоило бы включить?}
-
-\subsection{Постановка задачи}
-\textcolor{red}{Оставлю пока это тут.}
-
-\textcolor{red}{
-	В процессе исследования предлагается в начале определить одну точку верхнего века, а затем на основании этой точки изучать её окрестность и подбирать параметрические коэффициенты, исследуя оптимизируемый функционал. Точка, о которой идет речь обозначена на рис.~\ref{fig:glaz2} литерой $V$.
-	Метод дает возможность выявить положение верхнего века после определения положения зрачка, причём с высокой точностью. В связи с тем, что он отличается высокой скоростью работы и устойчивостью, возможно его применение в широком круге систем биометрической аутентификации.}
+\subsection{Задача выделения века}
+В алгоритмах идентификации личности, использующих радужку, чаще всего начинают с опеределения границы радужка-склера \cite{Adam_1, Daugman, Matv} или нормализуют радужку (рис.~\ref{fig:glaz3}) \cite{Min}, а лишь только потом определяют границу века. Это приводит к необходимости выполнять большое количество дополнительных вычислений. Рассмотрим только те методы, в которых для детектирования века необходимо заранее определить не более чем положение зрачка или радужки.
 
 \begin{figure}[h]
 	
 	\centering
 	
-	\includegraphics[width=0.6\linewidth]{glaz2.jpg}
+	\includegraphics[width=0.8\linewidth]{glaz3.jpg}
 	
-	\caption{Положение век. V и N~--- точки, соответствующие положениям верхнего и нижнего век соотвественно, Z~--- центр зрачка}
+	\caption{Определение положения века}
 	
-	\label{fig:glaz2}
+	\label{fig:glaz3}
 	
 \end{figure}
+
+Можно определить два ключевых этапа в произвольном алгоритме детектирования века на изображении глаза, один из которых ~--- предобработка изображения, а второй~--- локализация века. Как правило, исследователи работают только над одним из этапов, в то время как второй заимствуют из уже ранее написанных работ, предлагая новые комбинации предобработка~-~локализация, которые ранее не были описаны в научной литературе. Предложенный метод сравнивается с наиболее успешными комбинациями, демонстрирующими наиболее точный результат при тестировании.
+
+Для нахождения границы века в~\cite{Wildes} предложено использовать в качестве первого шага выделение границ на изображении, а затем для локализации века~--- преобразование~Хафа. 
+
+В \cite{Daugman} используется сглаживание изображения с применением фильтра Гаусса и интегродифференциальный оператор
+(IDO) для того, чтобы найти контуры на изображении в том числе нижнее и верхнее веко.
+
+Ещё один метод выделения века предложен в \cite{KKX}, так в работе для предообработки используется одномерный фильтр пиковой формы, хорошо удаляющий шум от ресниц, а для локализации IDO.
+
+Интуитивно понятный метод изложен в \cite{Masek}. Его идея заключается в разделении области радужки и века горизонтальными прямыми, их положение вдоль вертикальной оси определялось значением максимального отклика после осуществления свертки изображения с использованием фильтра Собела. Эта же свертка применяется в \cite{KP} в сочетании с IDO. 
+
+В исследованиях \cite{Adam_2, Adam_1} используется анизотропная диффузия для погашения шумов при предобработке, фильтр Собела для веделения границ и фильтр Хафа для параболлических кривых. 
+
+Для выделения границ в \cite{Yang} предложен ассиметричный оператор Кэнни и для локилизации~--- аппроксимация параболической кривой с помощью МНК. 
+
+В качестве одного из методов определения границ века также можно выделить метод адаптивных контуров, предложенный в работе \cite{Smirn}. Его основная идея~--- задать модель контура последовательностью точек и оптимизировать функционал на этом контуре, таким образом добиваясь его эволюции.
+
+Почти все изложенные выше методы базируются на необходимости наличия дополнительных внешних условий или требований к качеству изображения, поэтому не всегда отличаются хорошей устойчивостью в условиях постоянно изменяющегося окружения. 
+
+\subsection{Формальная постановка задачи}
+
+Пусть $f(x, y)$~--- множество точек, задающих линию века на изображении глаза и
+\newline $y=a(x-x_0)^2 + y_0$~--- уравнение аппроксимирующей параболы.Также пусть площадь круга радужки со зрачком~--- $S$.
+Обозначим площадь области в круге радужки, в которой парабола выше линиии века как $E_2$, и площадь области, в которой выше веко~--- $E_1$~(рис.~\ref{fig:glaz8}). Тогда суть задачи~--- найти такие коэффициенты $(a,x_0,y_0)$:
+\begin{gather}\label{minimax}
+	(a,x_0, y_0)=\argmin_{(a,x_0,y_0)}\left<\max{\Bigl\{\frac{E_1}{S}, \frac{E_2}{S}\Bigr\}}\right>
+\end{gather}
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.5\linewidth]{glaz8.jpg}
+	
+	\caption{Веко~--- зеленая линия и аппроксимирующая парабола~--- красная}
+	
+	\label{fig:glaz8}
+	
+\end{figure}
+\newpage
+\subsection{Метрики оценки качества}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newpage
 \section{Обзор существующих методов}
+\subsection{Модели аппроксимации века}
 
+\subsubsection{Эллиптический контур века}
+
+Один из возможных способов приблизить линию века~--- описать её с помощью эллиптической кривой. Эта модель основана на предположении, что глазное яблоко имеет сферическую форму:
+\begin{gather}\label{sphear}
+	x^2+y^2+z^2= R^2
+\end{gather}
+
+Такое предположение приводит к модели, основанной на открытости глаза. Степень открытости~--- угловое положение века относительно центра сферы. Тогда кривую века можно получить как пересечение сферы глазного яблока с плоскостью проходящей через ось $x$ с углом $\varphi$ относительно оси $z$ (рис.~\ref{fig:glaz4}). Уравнение этой плоскости имеет вид:
+\begin{gather}\label{el1}
+	\tan{\varphi}= \frac{y}{z}
+\end{gather}
+
+А кривая пересечения, моделирующая веко, задается эллиптической кривой:
+\begin{gather}\label{el2}
+	x^2+\frac{y^2}{\sin{\varphi}^2}=R^2
+\end{gather}
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.8\linewidth]{glaz4.jpg}
+	
+	\caption{Вид сбоку и спереди эллиптического контура века}
+	
+	\label{fig:glaz4}
+	
+\end{figure}
+
+
+\subsubsection{Параболический контур века}
+
+На практике оказывается, что определять кривую века как пересечение плоскости и сферы довольно грубо. Эмпирическим путем было установлено, что форма века глаза человека гораздо лучше аппроксимируется квадратичной параболой(рис.~\ref{fig:glaz5}). Тогда уравнение параметрической кривой, задающее контур века принимает вид:
+\begin{gather}\label{par1}
+	y = a(x-x_0)^2 + y_0
+\end{gather}
+
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.6\linewidth]{glaz5.jpg}
+	
+	\caption{Пример параболического контура века на изображении глаза}
+	
+	\label{fig:glaz5}
+	
+\end{figure}
+
+\newpage
 \subsection{Методы выделения контуров}
 
-Практически все методы выделения контуров основываются на разрывности сигнала яркости. Наиболее общим способом поиска перепадов яркостей является обработка изображения методом скользящего окна, называемого в разной литературе также маской, фильтром, ядром или шаблоном. Оно представляет из себя некую прямоугольную матрицу, накладываемую на группу пикселей исходного изображения. Элементы такой матрицы называют коэффициентами, а разного рода преобразования над ней~--- фильтрацией или пространственной фильтрацией(рис.~\ref{fig:prost_filt}).
+Практически все методы выделения контуров основываются на перепадах сигнала яркости. Наиболее общим способом их поиска является обработка изображения методом скользящего окна, называемого в разной литературе также маской, фильтром, ядром или шаблоном. Оно представляет из себя некую прямоугольную матрицу, накладываемую на группу пикселей исходного изображения. Элементы такой матрицы называют коэффициентами, а разного рода преобразования над ней~--- фильтрацией или пространственной фильтрацией(рис.~\ref{fig:prost_filt}).
 
 \begin{figure}[h]
 	
@@ -187,9 +267,9 @@ R = w(-1,-1)f(x-1, y-1) + w(-1,0)f(x-1,y)+\dots +w(0,0)f(x,y)+\dots \notag\\
 
 \subsubsection{Производные 1-го и 2-го порядков}
 
-Для определения направления и величины перепада яркости чаще всего применяют градиент изображения $\bigtriangledown \mathbf{f}$, определяемый в точке $(x,y)$ как вектор:
+Для определения направления и величины перепада яркости чаще всего применяют градиент изображения $\boldsymbol{\nabla}f$, определяемый в точке $(x,y)$ как вектор:
 \begin{gather}\label{grad}
-	\bigtriangledown \mathbf{f} \equiv \text{grad}(f)\equiv
+	\boldsymbol{\nabla}{f} \equiv \text{grad}(f)\equiv
 	\begin{bmatrix} g_x \\ g_y \end{bmatrix}=
 	\begin{bmatrix} \frac{\partial f}{\partial x} \\ \frac{\partial f}{\partial y}
 	\end{bmatrix}
@@ -242,7 +322,7 @@ R = w(-1,-1)f(x-1, y-1) + w(-1,0)f(x-1,y)+\dots +w(0,0)f(x,y)+\dots \notag\\
 a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 \end{gather}
 
-Однако, способ дискретно приблизить производную, описанный выше не единственный. Так, можно, например, использовать маски размером $3\times3$. Далее описаны другие вариации градиентных операторов.
+Однако способ дискретно приблизить производную, описанный выше, не единственный. Так, можно, например, использовать маски размером $3\times3$. Далее описаны другие вариации градиентных операторов.
 
 \subsubsection{Оператор Робертса}
 
@@ -328,7 +408,7 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 	
 \end{figure}
 
-Стоит отметить, что у каждой из градиентных масок, описанных выше, сумма весовых коэффициентов равна нулю, то есть эти операторы будут давать нулевой отклик на областях постоянной яркости, как и следовало ожидать от дифференциального оператора.
+Стоит отметить, что у каждой из градиентных масок, описанных выше, сумма весовых коэффициентов равна нулю, то есть эти операторы будут давать нулевой отклик на областях постоянной яркости, как и следовало ожидать от дифференциального оператора первого порядка.
 
 \subsubsection{Преобразование Хафа}
 
@@ -371,7 +451,6 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 
 Осуществив преобразование Хафа, далее предлагается разбить пространство параметров $\rho \Theta$ на так называемые ячейки накопления, как показано на рис.~\ref{fig:norm}-в. Затем для каждой точки $(x_k, y_k)$ исходной плоскости перебираем возможные значения для параметра $\Theta$ и находим соотвествующее ему значение $\rho = x_k\cos{\Theta}+y_k\sin{\Theta}$. Если выбор значения $\Theta_p$ приводит к решению $\rho_q$, то увеличиваем значение ячейки $A(p,q)$ на 1. После выполнения этого алгоритма значение $A(p,q)=Q$ означает, что на исходной плоскости находится $Q$ точек лежащих на прямой $\rho_p = x_k\cos{\Theta_q}+y_k\sin{\Theta_q}$.
 Отсюда и находят прямые контура. Аналогичным образом можно применять преобразование Хафа к любой функции вида $g(v,c) = 0$, где $v$~--- это вектор координат, а $c$~--- вектор коэффициентов.
-
 Так любое коническое сечение, в частности парабола, может быть задано уравнением в полярных координатах:
 \begin{gather}\label{conic}
 	\rho = \frac{de}{1\pm e\cos{\Theta}}~~~\text{или}
@@ -384,38 +463,69 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 \begin{gather}\label{parab_equ}
 	(y-y_0)^2 = 4a(x-x_0)
 \end{gather}
-
+ или
+ \begin{gather}\label{parab_equ_2}
+ 	Ay^2+By+C=x
+ \end{gather}
 \begin{figure}[h]
 	
 	\centering
 	
-	\includegraphics[width=0.7\linewidth]{hough_parab.jpg}
+	\includegraphics[width=0.6\linewidth]{hough_parab.jpg}
 	
 	\caption{Парабола}
 	
 	\label{fig:hough_parab}
 	
 \end{figure}
-Дифференциальное уравнение относительно $x$ может быть получено как:
-\begin{gather}\label{parab_diff}
-	\frac{\text{d}y}{\text{d}x}=\sqrt{\frac{a}{x-x_0}} = \tan{\lambda}
+
+Коэффициенты можно вычислять\cite{Hough_Parab}: 
+ \begin{gather}\label{parab_equ_3}
+	A=\frac{y_k(x_j-x_i)+y_j(x_i-x_k)+y_i(x_k-x_j)}{(y_i-y_j)(y_i-y_k)(y_j-y_k)},\\
+	B=\frac{y_k^2(x_j-x_i)+y_j^2(x_i-x_k)+y_i^2(x_k-x_j)}{(y_i-y_j)(y_i-y_k)(y_j-y_k)},\\
+	C= \frac{y_jy_k(y_j-y_k)x_i+y_ky_i(y_k-y_i)x_j+y_iy_j(y_i-y_j)x_k}{(y_i-y_j)(y_i-y_k)(y_j-y_k)}
 \end{gather}
-Это уранение касательной параболы. В работе [11] было выведено соотношение между углом наклона параболы и углом $\Theta$:
-\begin{gather}\label{angl}
-	\Theta = 2\lambda
+
+Таким образом перебрав все тройки точек, переходим в пространство коэффициентов, в котором аналогично пространству для прямых считаем значения в ячейках накопления, но уже в трехмерных.
+
+Наконец, можно получить значения координат вершины и апертуры параболы могут быть вычислены:
+\begin{gather}\label{parab_equ_4}
+	x_0 = -\frac{B}{2A},\\
+	y_0 = C-\frac{B^2}{4A},\\
+	4a=\frac{1}{A}
 \end{gather}
- 
-Из геометрических соображений получаем фокусную точку параболы
+
+
+\subsubsection{Преобразование Радона}
+
+Рассмотрим простейший случай преобразования Радона, а именно случай двух переменных. Исходим из предположения, что $f(x,y)$ определена на всей плоскости и достаточно быстро убывает на бесконечности. Последнее условие необходимо для сходимости несобственных интегралов. Тогда преобразованием Радона $f(x,y)$ называется функция~\cite{Radon}:
+\begin{gather}\label{radon}
+	Rf(s, \alpha) = \int_{-\infty}^{\infty}{f(x(z),y(z))} = \int_{-\infty}^{\infty}{f(s\cos{\alpha}+z\sin{\alpha}, s\sin{\alpha}-z\cos{\alpha})dz}
+\end{gather}
+
+Геометрический смысл этого преобразования~--- это интеграл от функции вдоль прямой, перпендекулярной вектору $\vec{n}=(\cos{\alpha}, \sin{\alpha})$ и проходящей на расстоянии $s$ от начала координат вдоль этого вектора (рис.~\ref{fig:Radon_transform}).
+\begin{figure}[h]
+	
+	\centering
+	
+	\includegraphics[width=0.5\linewidth]{Radon_transform.jpg}
+	
+	\caption{Параболическое преобразование изображения}
+	
+	\label{fig:Radon_transform}
+	
+\end{figure}
+
 \subsubsection{Интегро-дифференциальный оператор (IDO)}
 
-Оператор, предложенный в \cite{Daugman2, Daugman4, Daugman, Daugman3}, используется в первую очередь для детектирования объектов круглой формы: в оригинале зрачка и радужки. Но также его автором было предложено детектировать верхние и нижние веки путем настройки поиска контура с кругового на дугообразный.
+Оператор, предложенный в \cite{Daugman2}, а затем развитый в \cite{Daugman4, Daugman, Daugman3}, используется в первую очередь для детектирования объектов круглой формы: в оригинале зрачка и радужки. Но также его автором было предложено детектировать верхние и нижние веки путем настройки поиска контура с кругового на дугообразный~\cite{Daugman}.
 
 Интегро-дифференциальный оператор определяестя как:
-\begin{gather}\label{norm}
+\begin{gather}\label{ido}
 	\max_{r, x_0, y_0}{\left| G_\sigma(r)*\left(\frac{\delta}{\delta r}\right)\int_{r, x_0, y_0}{\frac{I(x,y)}{2\pi r}ds}\right|}
 \end{gather}
 
-При непрерывном применении оператора на изображении мы максимизируем исследуемый функционал по трем параметрам $(x_0, y_0)$~--- координаты центра и радиус $r$. Ожидается, что границы зрачка и радужки будут максимизировать производную интеграла по круговым границам, так как на них значения интерсивности резко меняются. $G_\sigma(r)$~--- сглаживающая функция. Для век алгоритм аналогичный, только форма исследуемых траекторий будет иметь другой вид. Существенная проблема для данного метода~--- излишняя зашумленность изображения, которая может породить внезапные перепады у интегрируемого функционала.
+При непрерывном применении оператора на изображении мы максимизируем исследуемый функционал по трём параметрам $(x_0, y_0)$~--- координаты центра и радиус $r$. Ожидается, что границы зрачка и радужки будут максимизировать производную интеграла по круговым границам, так как на них значения интерсивности резко меняются. $G_\sigma(r)$~--- сглаживающая функция. Для век алгоритм аналогичный, только форма исследуемых траекторий будет иметь другой вид. Существенная проблема для данного метода~--- излишняя зашумленность изображения, которая может породить внезапные перепады у интегрируемого функционала.
 
 
 \subsubsection{Оператор Кэнни}
@@ -441,94 +551,7 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 
 \newpage
 
-\subsection{Модели аппроксимации века}
 
-\subsubsection{Эллиптический контур века}
-
-Один из возможных способов приблизить линию века~--- описать ее с помощью эллиптической кривой. Эта модель основана на предположении, что глазное яблоко имеет сферическую форму:
-\begin{gather}\label{norm}
-	x^2+y^2+z^2= R^2
-\end{gather}
-
-Такое предположение приводит к модели, основанной на открытости глаза. Степень открытости~--- угловое положение века относительно центра сферы. Тогда кривую века можно получить как пересечение сферы глазного яблока с плоскостью проходящей через ось $x$ с углом $\varphi$ относительно оси $z$ (рис.~\ref{fig:glaz4}). Уравнение этой плоскости имеет вид:
-\begin{gather}\label{el1}
-	\tan{\varphi}= \frac{y}{z}
-\end{gather}
-
-А кривая пересечения, моделирующая веко, задается эллиптической кривой:
-\begin{gather}\label{el2}
-	x^2+\frac{y^2}{\sin{\varphi}^2}=R^2
-\end{gather}
-
-\begin{figure}[h]
-	
-	\centering
-	
-	\includegraphics[width=0.8\linewidth]{glaz4.jpg}
-	
-	\caption{Вид сбоку и спереди эллиптического контура века}
-	
-	\label{fig:glaz4}
-	
-\end{figure}
-
-
-\subsubsection{Параболический контур века}
-
-На практике оказывается, что определять кривую века как пересечение прямой и сферы довольно грубо. Эмпирическим путем было установлено, что форма века глаза человека гораздо лучше аппроксимируется квадратичной параболой(рис.~\ref{fig:glaz5}). Тогда уравнение параметрической кривой, задающее контур века принимает вид:
-\begin{gather}\label{par1}
-	y = a(x-x_0)^2 + y_0
-\end{gather}
-
-\begin{figure}[h]
-	
-	\centering
-	
-	\includegraphics[width=0.6\linewidth]{glaz5.jpg}
-	
-	\caption{Пример параболического контура века на изображении глаза}
-	
-	\label{fig:glaz5}
-	
-\end{figure}
-
-\newpage
-\subsection{Методы выделения века на изображении глаза}
-
-В алгоритмах идентификации личности, использующих радужку, чаще всего начинают с опеределения границы радужка-склера \cite{Adam_1, Daugman, Matv} или нормализуют радужку (рис.~\ref{fig:glaz3}) \cite{Min}, а лишь только потом определяют границу века. Это приводит к необходимости выполнять большое количество дополнительных вычислений. Рассмотрим только те методы, в которых для детектирования века необходимо заранее определить не более чем положение зрачка или радужки.
-
-\begin{figure}[h]
-	
-	\centering
-	
-	\includegraphics[width=0.8\linewidth]{glaz3.jpg}
-	
-	\caption{Определение положения века}
-	
-	\label{fig:glaz3}
-	
-\end{figure}
-
-Мы можем определить два ключевых этапа в произвольном алгоритме детектирования века на изображении глаза, один из которых ~--- предобработка изображения, а второй~--- локализация века. Как правило, исследователи работают только над одним из этапов, в то время как второй заимствуют из уже ранее написанных работ, предлагая новые комбинации предобработка~-~локализация, которые ранее не были описаны в научной литературе. В данной работе мной проведена оценка существующих методов распознавания и ананлиз методик ранее не упоминавшихся в иcследовательских работах. Предложенный метод сравнивается с наиболее успешными комбинациями, демонстрирующими наиболее точный результат при тестировании.
-
-\textcolor{red}{Планирую расписать этот блок поподробнее, пока просто внес коррективы}
-
-Для нахождения границы века в~\cite{Wildes} предложено использовать в качестве первого шага выделение границ на изображении, а затем для локализации века~--- преобразование~Хафа. 
-
-В \cite{Daugman} используется сглаживание изображения с применением фильтра Гаусса и интегродифференциальный оператор
-(IDO) для того, чтобы найти контуры на изображении в том числе нижнее и верхнее веко.
-
-Ещё один метод выделения века предложен в \cite{KKX}, так в работе для предообработки используется одномерный фильтр пиковой формы, хорошо удаляющий шум от ресниц, а для локализации IDO.
-
-Интуитивно понятный метод изложен в \cite{Masek}. Его идея заключается в разделении области радужки и века горизонтальными прямыми, их положение вдоль вертикальной оси определялось значением максимального отклика после осуществления свертки изображения с использованием фильтра Собела. Эта же свертка применяется в \cite{KP} в сочетании с IDO. 
-
-В исследованиях \cite{Adam_2, Adam_1} используется анизотропная диффузия для погашения шумов при предобработке, фильтр Собела для веделения границ и фильтр Хафа для параболлических кривых. 
-
-Для выделения границ в \cite{Yang} предложен ассиметричный оператор Кэнни и для локилизации~--- аппроксимация параболической кривой с помощью МНК. 
-
-В качестве одного из методов определения границ века также можно выделить метод адаптивных контуров, предложенный в работе \cite{Smirn}. Его основная идея~--- задать модель контура последовательностью точек и оптимизировать функционал на этом контуре, таким образом добиваясь его эволюции.
-
-Почти все изложенные выше методы базируются на необходимости наличия дополнительных внешних условий или требований к качеству изображения, поэтому не всегда отличаются хорошей устойчивостью в условиях постоянно изменяющегося окружения. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -549,14 +572,14 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 	
 \end{figure}
 
-В качестве модели кривой, задающей линию века, выбрана параболическая. Как было описано выше, она позволяет довольно четко определить границу века и на практике оказывается выигрышной. Таким образом, основной задачей алгоритма становится определить 3 ключевых параметра: $a, x_0$~и~$y_0$ в~\ref{parab},~--- однозначно определяющих положение века.
+В качестве модели кривой, задающей линию века, выбрана параболическая. Как было описано выше, она позволяет довольно четко определить границу века и на практике оказывается выигрышной. Таким образом, основной задачей алгоритма становится определить 3 ключевых параметра: $a, x_0$~и~$y_0$ в~(\ref{parab}), однозначно определяющих положение века.
 \begin{gather}\label{parab}
 	y = a(x-x_0)^2 + y_0
 \end{gather}
 
 \subsection{Этап предобработки изображения}
 
-В качестве входных данных для алгоритма, помимо самого изображения глаза, используются данные о положении зрачка, а именно координаты его центра и его радиус. Нужны эти данные исключительно для того, чтобы локализировать веко и ускорить обработку изображения. Так, высоту рамки области, в которой мы ищем веко, устанавливаем равной $4\cdot PupR$, где $PupR$~--- это радиус зрачка. А область поиска смещаем на $15\%$ от вертикальной координаты центра зрачка. Также оставляем отсутуп в $5\%$ от горизонтальной координаты центра зрачка слева и справа. Полученный результат локализации изображен на рис.~\ref{fig:glaz6}. Все коэффициенты подобраны опытным путем как наиболее репрезентативные.
+В качестве входных данных для алгоритма, помимо самого изображения глаза, используются данные о положении зрачка, а именно координаты центра и радиус. Нужны эти данные для того, чтобы локализировать веко и ускорить обработку изображения. Так, высоту рамки области, в которой ищется веко, устанавливаем равной $4\cdot PupR$, где $PupR$~--- это радиус зрачка. А область поиска смещаем на $15\%$ от вертикальной координаты центра зрачка. Также оставляем отсутуп в $5\%$ от горизонтальной координаты центра зрачка слева и справа. Полученный результат локализации изображен на рис.~\ref{fig:glaz6}. Все коэффициенты подобраны опытным путем.
 
 \begin{figure}[h]
 	
@@ -570,7 +593,7 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
 	
 \end{figure}
 
-Заметим, что линия века на фотографии чаще всего сопровождается резким перепадом яркости по вертикали. Соотвественно мы легко можем отследить линию века продифференцировав изображение по вертикальной компоненте(рис.~\ref{fig:glaz7}).
+Заметим, что линия века на фотографии чаще всего сопровождается резким перепадом яркости по вертикали. Соотвественно легко можно отследить линию века, продифференцировав изображение по вертикальной компоненте (рис.~\ref{fig:glaz7}).
 
 \begin{figure}[h]
 	
@@ -669,24 +692,6 @@ a~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~b\notag
  
 \newpage
 \subsection{Преобразование Радона}
-
-Рассмотрим простейший случай преобразования Радона, а имеено случай двух переменных. Исходим из предположения, что $f(x,y)$ определена на всей плоскости и достаточно быстро убывает на бесконечности. Последнее условие необходимо для сходимости несобственных интегралов. Тогда преобразованием Радона $f(x,y)$ называется функция~\cite{Radon}:
-\begin{gather}\label{radon}
-	Rf(s, \alpha) = \int_{-\infty}^{\infty}{f(x(z),y(z))} = \int_{-\infty}^{\infty}{f(s\cos{\alpha}+z\sin{\alpha}, s\sin{\alpha}-z\cos{\alpha})dz}
-\end{gather}
-
-Геометрический смысл этого преобразования~--- это интеграл от функции вдоль прямой, перпендекулярной вектору $\vec{n}=(\cos{\alpha}, \sin{\alpha})$ и проходящей на расстоянии $s$ от начала координат вдоль этого вектора (рис.~\ref{fig:Radon_transform}).
-\begin{figure}[h]
-	
-	\centering
-	
-	\includegraphics[width=0.5\linewidth]{Radon_transform.jpg}
-	
-	\caption{Параболическое преобразование изображения}
-	
-	\label{fig:Radon_transform}
-	
-\end{figure}
 
 Перейдем к дискретной интерпретации этого метода. Для того, чтобы применить такое преобразование к изображению, можно разделить его на два этапа: выполнить преобразование поворота и просуммировать построчно значения яркостей. Тогда изменение наклона может быть задано формулой:
 \begin{gather}\label{nakl}
