--- a/mylib.bib
+++ b/mylib.bib
@@ -1,12 +1,13 @@
 % Encoding: UTF-8
 
-@Article{Daugman,
-  author  = {Daugman J.},
-  journal = {IEEE Trans. Circ. Syst. Vid.},
-  title   = {How iris recognition works},
-  year    = {2004},
-  doi     = {Vol. 14. No. 1.
-  P. 21–30.},
+@InCollection{Daugman,
+  author    = {John Daugman},
+  booktitle = {Handbook of Image and Video Processing},
+  publisher = {Elsevier},
+  title     = {How Iris Recognition Works},
+  year      = {2005},
+  pages     = {1251--1262},
+  doi       = {10.1016/b978-012119792-6/50133-9},
 }
 
 @Article{Daugman2,
@@ -26,11 +27,16 @@
 }
 
 @Article{Daugman4,
-	author  = {Daugman J.},
-	journal = {Pattern Recognition},
-	title   = {The importance of being random : statistical principles of iris recognition},
-	year    = {2003},
-	doi     = {36(2), 279 - 291},
+  author    = {John Daugman},
+  journal   = {Pattern Recognition},
+  title     = {The importance of being random: statistical principles of iris recognition},
+  year      = {2003},
+  month     = {feb},
+  number    = {2},
+  pages     = {279--291},
+  volume    = {36},
+  doi       = {10.1016/s0031-3203(02)00030-4},
+  publisher = {Elsevier {BV}},
 }
 
 @Article{Adam_1,
@@ -50,31 +56,36 @@
 	doi     = {Vol. 1. No. 14. P. 1919–1929.},
 }
 
-@Article{Min,
-	author  = {Min, T., and R. Park.},
-	journal = {Conference (International) on Image Processings Proceedings
-	.},
-	title   = {Comparison of eyelid and eyelash detection algorithms for perfor-
-	mance improvement of iris recognition.},
-	year    = {2008},
-	doi     = {257–260.},
+@InProceedings{Min,
+  author    = {Tae-Hong Min and Rae-Hong Park},
+  booktitle = {2008 15th {IEEE} International Conference on Image Processing},
+  title     = {Comparison of eyelid and eyelash detection algorithms for performance improvement of iris recognition},
+  year      = {2008},
+  publisher = {{IEEE}},
+  doi       = {10.1109/icip.2008.4711740},
+  journal   = {Conference (International) on Image Processings Proceedings .},
 }
 
 @Article{Wildes,
-	author  = {Wildes R.},
-	journal = {Proc. IEEE},
-	title   = {Iris recognition: an emerging biometric technology},
-	year    = {1997},
-	doi     = {Vol. 85. No. 9.
-	P. 1348–1363.},
+  author    = {R.P. Wildes},
+  journal   = {Proceedings of the {IEEE}},
+  title     = {Iris recognition: an emerging biometric technology},
+  year      = {1997},
+  number    = {9},
+  pages     = {1348--1363},
+  volume    = {85},
+  doi       = {10.1109/5.628669},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
 }
 
-@Article{KKX,
-	author  = {Xiangde Z, Qi W., Hegui Z.},
-	journal = {Chinese Control and Decision Conference Proceedings},
-	title   = {Noise detection of iris image based on texture analysis},
-	year    = {2009},
-	doi     = {P. 2366–2370.},
+@InProceedings{KKX,
+  author    = {Xiangde Zhang and Qi Wang and Hegui Zhu and Cuili Yao and Longcheng Gao and Xianyan Liu},
+  booktitle = {2009 Chinese Control and Decision Conference},
+  title     = {Noise detection of iris image based on texture analysis},
+  year      = {2009},
+  month     = {jun},
+  publisher = {{IEEE}},
+  doi       = {10.1109/ccdc.2009.5192665},
 }
 
 @Article{Masek,
@@ -86,12 +97,16 @@
 }
 
 @Article{KP,
-	author  = {Kang B., Park K.},
-	journal = {Pattern Recogn.
-	Lett.,},
-	title   = {A robust eyelash detection based on iris focus assessment},
-	year    = {2007},
-	doi     = {Vol. 28. No. 13. P. 1630–1639.},
+  author    = {Byung Jun Kang and Kang Ryoung Park},
+  journal   = {Pattern Recognition Letters},
+  title     = {A robust eyelash detection based on iris focus assessment},
+  year      = {2007},
+  month     = {oct},
+  number    = {13},
+  pages     = {1630--1639},
+  volume    = {28},
+  doi       = {10.1016/j.patrec.2007.04.004},
+  publisher = {Elsevier {BV}},
 }
 
 @Article{Adam_2,
@@ -156,19 +171,30 @@
 }
 
 @Article{Canny,
-	author  = {Canny J.},
-	journal = {IEEE TPAMI},
-	title   = {A computational approach to edge detection},
-	year    = {1986},
-	doi     = {V.8. N.6. P.679–698},
+  author     = {Canny, J},
+  journal    = {IEEE Trans. Pattern Anal. Mach. Intell.},
+  title      = {A Computational Approach to Edge Detection},
+  year       = {1986},
+  issn       = {0162-8828},
+  month      = jun,
+  number     = {6},
+  pages      = {679–698},
+  volume     = {8},
+  address    = {USA},
+  doi        = {10.1109/TPAMI.1986.4767851},
+  issue_date = {June 1986},
+  keywords   = {Edge detection, feature extraction, image processing, multiscale image analysis, machine vision},
+  numpages   = {20},
+  publisher  = {IEEE Computer Society},
+  url        = {https://doi.org/10.1109/TPAMI.1986.4767851},
 }
 
 @Article{Inter,
-	author  = {Дьяконов В. П.},
-	journal = {М.: Наука},
-	title   = { Справочник по алгоритмам и программам на языке бейсик для персональных ЭВМ},
-	year    = {1987},
-	doi     = {С. 240. ББК 22.18 Д93 УДК 519.6(083)},
+  author  = {Дьяконов В. П.},
+  journal = {М.: Наука},
+  title   = {Справочник по алгоритмам и программам на языке бейсик для персональных ЭВМ},
+  year    = {1987},
+  doi     = {С. 240. ББК 22.18 Д93 УДК 519.6(083)},
 }
 
 @Article{Radon,
@@ -177,6 +203,14 @@
 	title   = {The Radon Transform and Some of Its Applications.},
 	year    = {1983},
 	doi     = {},
+}
+
+@Article{Hough_Parab,
+	author  = {D. H. Ballard},
+	journal = {Pattern Recognition},
+	title   = {Generalizing the Hough transform to detect arbitrary shapes},
+	year    = {1981},
+	doi     = {vol. 13, no. 2, pp. 111–122},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
